src/test/ui/regions/region-invariant-static-error-reporting.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/region-invariant-static-error-reporting.rs:24:15
   |
LL |       let bad = if x.is_some() {
   |  _______________^
LL | |         x.unwrap()
LL | |     } else {
LL | |         mk_static()
LL | |     };
   | |_____^

error: borrowed data escapes outside of function
  --> $DIR/region-invariant-static-error-reporting.rs:25:9
   |
LL | fn unify<'a>(x: Option<Invariant<'a>>, f: fn(Invariant<'a>)) {
   |              - `x` is a reference that is only valid in the function body
LL |     let bad = if x.is_some() {
LL |         x.unwrap()
   |         ^^^^^^^^^^ `x` escapes the function body here

error: aborting due to previous error

